fix image stretch on ios

--- a/client/shisha-rent/src/components/customer/home/Home.module.scss
+++ b/client/shisha-rent/src/components/customer/home/Home.module.scss
@@ -153,6 +153,7 @@
 
       img {
         display: none;
+        max-height: 385px;
       }
     }
 
